--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kr">
 <head>
     <meta charset="UTF-8">
-    <title>환경설정</title>
+    <title>기본 화면</title>
 </head>
 <body>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13045.352805774419!2d129.06065534999996!3d35.173122299999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sko!2skr!4v1654568043013!5m2!1sko!2skr" width="600" height="450" style="border:0;" allowfullscreen="yes" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </body>
 </html>
